Fix alignment when close button is not present

--- a/src/alert/alert.module.css
+++ b/src/alert/alert.module.css
@@ -3,8 +3,15 @@
     border-width: 1px;
     color: var(--reactist-content-primary);
     padding: var(--reactist-spacing-small);
+}
+
+.content {
     /* this is to make sure it always has the same minimum height, whether it has a close button or not */
-    min-height: calc(2 * var(--reactist-spacing-small) + var(--reactist-button-small-height) + 2px);
+    min-height: var(--reactist-button-small-height);
+}
+
+.icon {
+    display: block;
 }
 
 .tone-info {
